--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="gameContainer">
         <div class="gameOver">Welcome to Pokemon Run - Created by Team Rocket</div>
         <div class="dino"></div>
-        <div class="scoreCont">Your Score: 0</div>
+        <div id="scoreCont">Your Score: 0</div>
         <div class="obstacle obstacleAni"></div>
     </div>
  
